--- a/WimyBlog/Properties/launchSettings.json
+++ b/WimyBlog/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "wimyblog": {
       "commandName": "Project",
-      "commandLineArgs": "E:\\git\\test_web"
+      "commandLineArgs": "C:\\git\\blog.wimy.com"
     }
   }
 }
