--- a/WimyBlog/WimyBlog.csproj
+++ b/WimyBlog/WimyBlog.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MarkdownSharp" Version="2.0.5" />
     <PackageReference Include="System.Xml.XmlDocument" Version="4.3.0" />
   </ItemGroup>
 
